Update Main xml UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,8 @@
     android:background="#4C6EE5">
 
     <!-- Title and Description -->
-
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/mainTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -24,9 +23,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Hash Tag and Lock Icon -->
+<!--    <ImageView-->
+<!--        android:id="@+id/mainTitleImageView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="30dp"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:src="@drawable/nugushow_white"-->
+<!--        android:gravity="center"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
     <TextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/mainDescriptionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -37,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/mainTitleTextView" />
 
     <TextView
         android:id="@+id/hashTagTextView"
@@ -53,84 +64,104 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/mainDescriptionTextView" />
+
+    <!-- Card View for Message Check -->
 
     <ImageView
         android:id="@+id/lockIcon"
-        android:layout_marginBottom="10dp"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/lockin"
         app:layout_constraintBottom_toBottomOf="@+id/hashTagTextView"
-        app:layout_constraintStart_toEndOf="@+id/hashTagTextView"
-        android:layout_marginStart="8dp"/>
-
-
-    <!-- Cards for Actions -->
-
-    <!-- Page Indicator -->
+        app:layout_constraintStart_toEndOf="@+id/hashTagTextView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
-        android:layout_width="224dp"
+        android:layout_width="230dp"
         android:layout_height="287dp"
-        android:layout_margin="16dp"
         app:cardCornerRadius="17dp"
         app:cardElevation="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/pageIndicator"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hashTagTextView">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="40dp">
 
-        <LinearLayout
-            android:layout_width="224dp"
+        <!-- 내부 ConstraintLayout -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="230dp"
             android:layout_height="287dp"
-            android:orientation="vertical"
-
             android:padding="16dp">
 
+            <!-- 텍스트 제목 -->
             <TextView
+                android:id="@+id/cardTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="메시지 검사"
+                android:textStyle="bold"
                 android:textColor="#333333"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
+            <!-- 설명 텍스트 -->
             <TextView
+                android:id="@+id/cardDescriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="75dp"
                 android:text="피싱 메시지 검사하기"
+                android:textStyle="bold"
                 android:textColor="#777777"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@+id/cardTitleTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
+            <!-- 이미지 -->
+
+            <!-- 검사 시작 버튼 -->
 
             <ImageView
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/message_icon" />
+                android:id="@+id/messageImageView"
+                android:layout_width="80dp"
+                android:layout_height="77dp"
+                android:layout_marginTop="28dp"
+                android:src="@drawable/message_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cardDescriptionTextView" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/startButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="40dp"
                 android:text="검사 시작하기"
+                android:textStyle="bold"
                 android:textColor="#FFFFFF"
-                app:backgroundTint="#F57171" />
+                app:backgroundTint="#F57171"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-
+    <!-- Page Indicator -->
     <LinearLayout
         android:id="@+id/pageIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="16dp">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="20dp"
