--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,18 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!-- activity_result.xml -->
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+    android:layout_height="match_parent"
+    android:background="#F5F5F5"
+    tools:context=".ResultActivity">
 
+    <!-- Title -->
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="누구쇼?"
+        android:textSize="24sp"
+        android:textColor="#4C6EE5"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp" />
+
+    <!-- Sub-title -->
+    <TextView
+        android:id="@+id/subtitleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="땡땡님의 진단 결과예요."
+        android:textSize="20sp"
+        android:textColor="#333333"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp" />
+
+    <!-- Result Box -->
+    <LinearLayout
+        android:id="@+id/resultBox"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_background"
+        android:gravity="center"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp">
+
+        <!-- Emoji -->
+        <ImageView
+            android:id="@+id/emojiImageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/result_100"
+            android:layout_gravity="center" />
+
+        <!-- Score -->
         <TextView
-            android:id="@+id/resultTextView"
+            android:id="@+id/scoreTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp" />
+            android:text="80%"
+            android:textSize="48sp"
+            android:textStyle="bold"
+            android:textColor="#333333"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <!-- Message -->
+        <TextView
+            android:id="@+id/safeMessageTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="해당 메시지는 안전해요."
+            android:textSize="16sp"
+            android:textColor="#777777"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp" />
+
     </LinearLayout>
+
+    <!-- Blue Button -->
+    <Button
+        android:id="@+id/checkAnotherButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="다른 메시지 검사하기"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:backgroundTint="#4C6EE5"
+        app:layout_constraintTop_toBottomOf="@+id/resultBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
