--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +8,12 @@
     tools:layout_editor_absoluteY="25dp">
 
     <!-- Title -->
+
+    <!-- Description -->
+
+    <!-- Hashtag -->
+
+    <!-- Lock Icon -->
     <TextView
         android:id="@+id/mainTitleTextView"
         android:layout_width="wrap_content"
@@ -18,12 +23,9 @@
         android:text="누구쇼?"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="48dp" />
 
-    <!-- Description -->
     <TextView
         android:id="@+id/mainDescriptionTextView"
         android:layout_width="wrap_content"
@@ -32,12 +34,9 @@
         android:text="땡땡님, 지금까지 \n12번 만큼 \n폰을 지켰어요!"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/mainTitleTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="107dp" />
 
-    <!-- Hashtag -->
     <TextView
         android:id="@+id/hashTagTextView"
         android:layout_width="wrap_content"
@@ -48,33 +47,26 @@
         android:text="#폰지키미"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/mainDescriptionTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="16dp" />
-
-    <!-- Lock Icon -->
-    <ImageView
-        android:id="@+id/lockIcon"
-        android:layout_width="170dp"
-        android:layout_height="146dp"
-        android:src="@drawable/lockin"
-        app:layout_constraintTop_toBottomOf="@id/hashTagTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="230dp" />
 
     <!-- Card View -->
+    <ImageView
+        android:id="@+id/lockIcon"
+        android:layout_width="200dp"
+        android:layout_height="195dp"
+        android:src="@drawable/lockin"
+        tools:layout_editor_absoluteX="207dp"
+        tools:layout_editor_absoluteY="248dp" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="230dp"
         android:layout_height="287dp"
         app:cardCornerRadius="17dp"
         app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/lockIcon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
+        tools:layout_editor_absoluteX="91dp"
+        tools:layout_editor_absoluteY="459dp">
 
         <!-- 내부 ConstraintLayout -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,44 +83,47 @@
                 android:textColor="#333333"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <!-- 카드 설명 -->
             <TextView
                 android:id="@+id/cardDescriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="피싱 메시지 검사하기"
                 android:textColor="#777777"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/cardTitleTextView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="8dp" />
+                app:layout_constraintTop_toBottomOf="@id/cardTitleTextView" />
 
             <!-- 이미지 -->
+
+            <!-- 검사 시작 버튼 -->
+
             <ImageView
                 android:id="@+id/messageImageView"
                 android:layout_width="80dp"
                 android:layout_height="77dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/message_icon"
-                app:layout_constraintTop_toBottomOf="@id/cardDescriptionTextView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp" />
+                app:layout_constraintTop_toBottomOf="@id/cardDescriptionTextView" />
 
-            <!-- 검사 시작 버튼 -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/startButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="56dp"
                 android:text="검사 시작하기"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 app:backgroundTint="#F57171"
-                app:layout_constraintTop_toBottomOf="@id/messageImageView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp" />
+                app:layout_constraintTop_toBottomOf="@id/messageImageView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -138,10 +133,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/card1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
+        tools:layout_editor_absoluteX="186dp"
+        tools:layout_editor_absoluteY="762dp">
 
         <ImageView
             android:layout_width="40dp"
