--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
+    android:background="#F4F4F8"
     tools:context=".ResultActivity">
 
     <!-- Title -->
@@ -41,7 +41,6 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:orientation="vertical"
-        android:background="@drawable/rounded_background"
         android:gravity="center"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
@@ -60,6 +59,17 @@
         <!-- Score -->
         <TextView
             android:id="@+id/scoreTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="80%"
+            android:textSize="48sp"
+            android:textStyle="bold"
+            android:textColor="#333333"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/resultTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="80%"
