--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:text="누구쇼?"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="20sp"
         tools:layout_editor_absoluteX="32dp"
         tools:layout_editor_absoluteY="48dp" />
 
@@ -33,10 +33,12 @@
         android:gravity="left"
         android:text="땡땡님, 지금까지 \n12번 만큼 \n폰을 지켰어요!"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="28sp"
+        android:layout_marginTop="8dp"
         tools:layout_editor_absoluteX="32dp"
         tools:layout_editor_absoluteY="107dp" />
 
+    <!-- Card View -->
     <TextView
         android:id="@+id/hashTagTextView"
         android:layout_width="wrap_content"
@@ -46,32 +48,31 @@
         android:padding="8dp"
         android:text="#폰지키미"
         android:textColor="#FFFFFF"
-        android:textSize="14sp"
+        android:textSize="17sp"
         tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteY="248dp" />
 
-    <!-- Card View -->
     <ImageView
         android:id="@+id/lockIcon"
-        android:layout_width="200dp"
+        android:layout_width="190dp"
         android:layout_height="195dp"
         android:src="@drawable/lockin"
-        tools:layout_editor_absoluteX="207dp"
+        tools:layout_editor_absoluteX="224dp"
         tools:layout_editor_absoluteY="248dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
-        android:layout_width="230dp"
-        android:layout_height="287dp"
+        android:layout_width="270dp"
+        android:layout_height="320dp"
         app:cardCornerRadius="17dp"
         app:cardElevation="4dp"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="459dp">
+        tools:layout_editor_absoluteX="70dp"
+        tools:layout_editor_absoluteY="450dp">
 
         <!-- 내부 ConstraintLayout -->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="270dp"
+            android:layout_height="320dp"
             android:padding="16dp">
 
             <!-- 카드 제목 -->
@@ -79,9 +80,10 @@
                 android:id="@+id/cardTitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:text="메시지 검사"
                 android:textColor="#333333"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -92,9 +94,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
                 android:text="피싱 메시지 검사하기"
                 android:textColor="#777777"
-                android:textSize="14sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardTitleTextView" />
@@ -105,10 +108,10 @@
 
             <ImageView
                 android:id="@+id/messageImageView"
-                android:layout_width="80dp"
-                android:layout_height="77dp"
-                android:layout_marginStart="56dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="76dp"
+                android:layout_marginTop="40dp"
                 android:src="@drawable/message_icon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardDescriptionTextView" />
@@ -117,10 +120,11 @@
                 android:id="@+id/startButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="40dp"
                 android:text="검사 시작하기"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"
+                android:textSize="17sp"
+                c
                 app:backgroundTint="#F57171"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/messageImageView" />
@@ -136,10 +140,13 @@
         tools:layout_editor_absoluteX="186dp"
         tools:layout_editor_absoluteY="762dp">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/indicator" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/indicator"
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="792dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
