--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,101 +8,89 @@
     tools:context=".ResultActivity">
 
     <!-- Title -->
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="누구쇼?"
-        android:textSize="24sp"
-        android:textColor="#4C6EE5"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
+    <ImageView
+        android:id="@+id/resultTitleTextImage"
+        android:layout_width="100dp"
+        android:layout_height="21dp"
+        android:src="@drawable/nugushow_blue"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="50dp" />
 
-    <!-- Sub-title -->
     <TextView
         android:id="@+id/subtitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="땡땡님의 진단 결과예요."
-        android:textSize="20sp"
+        android:textStyle="bold"
         android:textColor="#333333"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        android:textSize="25sp"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="102dp" />
 
-    <!-- Result Box -->
     <LinearLayout
         android:id="@+id/resultBox"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:orientation="vertical"
-        android:gravity="center"
+        android:layout_width="400dp"
+        android:layout_height="222dp"
+        android:background="#FFFFFF"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp">
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="167dp">
 
-        <!-- Emoji -->
         <ImageView
             android:id="@+id/emojiImageView"
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/result_100"
-            android:layout_gravity="center" />
+            android:layout_height="176dp"
+            android:src="@drawable/result_100" />
 
-        <!-- Score -->
         <TextView
             android:id="@+id/scoreTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80%"
-            android:textSize="48sp"
-            android:textStyle="bold"
-            android:textColor="#333333"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
 
+            android:layout_marginTop="10dp"
+            android:text="80%"
+            android:textColor="#333333"
+            android:textSize="48sp"
+            android:textStyle="bold" />
+
+        <!-- Message -->
         <TextView
             android:id="@+id/resultTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="80%"
-            android:textSize="48sp"
-            android:textStyle="bold"
-            android:textColor="#333333"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:text="/좋음"
+            android:textColor="#333333"
+            android:textSize="20sp"
+            android:textStyle="normal" />
 
-        <!-- Message -->
         <TextView
             android:id="@+id/safeMessageTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="해당 메시지는 안전해요."
-            android:textSize="16sp"
-            android:textColor="#777777"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:text="해당 메시지는 안전해요."
+            android:textColor="#777777"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-    <!-- Blue Button -->
     <Button
         android:id="@+id/checkAnotherButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="다른 메시지 검사하기"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        app:backgroundTint="#4C6EE5"
-        app:layout_constraintTop_toBottomOf="@+id/resultBox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
+        android:textStyle="bold"
+        app:backgroundTint="#407FFF"
+        app:cornerRadius="8dp"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="420dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
