--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,74 +7,149 @@
     android:background="#F4F4F8"
     tools:context=".ResultActivity">
 
-    <!-- Title -->
     <ImageView
         android:id="@+id/resultTitleTextImage"
         android:layout_width="100dp"
         android:layout_height="21dp"
         android:src="@drawable/nugushow_blue"
         tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="50dp" />
+        tools:layout_editor_absoluteY="50dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/subtitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="땡땡님의 진단 결과예요."
+        android:text="해송님의 문자 진단 결과예요."
         android:textStyle="bold"
         android:textColor="#333333"
-        android:textSize="25sp"
+        android:textSize="26sp"
         tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="102dp" />
+        tools:layout_editor_absoluteY="102dp"
+        tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:id="@+id/resultBox"
         android:layout_width="400dp"
         android:layout_height="222dp"
-        android:background="#FFFFFF"
+
         android:padding="16dp"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="167dp">
+        android:orientation="vertical"
+        android:background="@drawable/rounded_box"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="169dp"
+        tools:ignore="MissingConstraints">
 
-        <ImageView
-            android:id="@+id/emojiImageView"
-            android:layout_width="80dp"
-            android:layout_height="176dp"
-            android:src="@drawable/result_100" />
-
+        <!-- Message Safety Score (TextView on top, left-aligned) -->
         <TextView
-            android:id="@+id/scoreTextView"
+            android:id="@+id/scoreSafeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_marginTop="10dp"
-            android:text="80%"
+            android:text="문자 안전 점수"
             android:textColor="#333333"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_gravity="start"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"/>
 
-        <!-- Message -->
-        <TextView
-            android:id="@+id/resultTextView"
+        <!-- Horizontal Layout for Emoji and Texts -->
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="/좋음"
-            android:textColor="#333333"
-            android:textSize="20sp"
-            android:textStyle="normal" />
-
-        <TextView
-            android:id="@+id/safeMessageTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:layout_marginTop="8dp"
-            android:text="해당 메시지는 안전해요."
-            android:textColor="#777777"
-            android:textSize="16sp" />
+            android:layout_marginLeft="40dp">
 
+            <!-- Emoji Image -->
+            <ImageView
+                android:id="@+id/emojiImageView"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/result_100"
+                android:layout_marginEnd="16dp" />
+
+            <!-- Vertical Layout for Score, Icons, and Safe Message -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_vertical">
+
+                <!-- Horizontal Layout for Score and Result Text -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <!-- Score Text -->
+                    <TextView
+                        android:id="@+id/scoreTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="80%"
+                        android:fontFamily="sans-serif-black"
+                        android:textColor="#333333"
+                        android:textSize="48sp"
+                        android:textStyle="bold" />
+
+                    <!-- Result Text (Right of Score) -->
+                    <TextView
+                        android:id="@+id/resultTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="/좋음"
+                        android:textColor="#8A8A8A"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="10dp"/>
+                </LinearLayout>
+
+                <!-- Icons Layout -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp">
+
+                    <ImageView
+                        android:id="@+id/mark1ImageView"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/bluemark"
+                        android:layout_marginEnd="8dp" />
+
+                    <ImageView
+                        android:id="@+id/mark2ImageView"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/bluemark"
+                        android:layout_marginEnd="8dp" />
+
+                    <ImageView
+                        android:id="@+id/mark3ImageView"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/greymark" />
+                </LinearLayout>
+
+                <!-- Safe Message Text -->
+                <TextView
+                    android:id="@+id/safeMessageTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="해당 문자는 안전해요."
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="8dp" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <Button
@@ -91,6 +166,7 @@
         app:backgroundTint="#407FFF"
         app:cornerRadius="8dp"
         tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="420dp" />
+        tools:layout_editor_absoluteY="420dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
