--- a/app/src/main/res/layout/activity_result_safe.xml
+++ b/app/src/main/res/layout/activity_result_safe.xml
@@ -156,7 +156,7 @@
         android:id="@+id/checkAnotherButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="다른 메시지 검사하기"
+        android:text="다른 문자 검사하기"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:padding="10dp"
