--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="메시지 검사"
+                android:text="문자 검사"
                 android:textColor="#333333"
                 android:textSize="25sp"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="5dp"
-                android:text="피싱 메시지 검사하기"
+                android:text="피싱 문자메시지 검사하기"
                 android:textColor="#777777"
                 android:textSize="17sp"
                 android:textStyle="bold"
